# 2048-Project

./: CMakeLists.txt  README.md  TODO.txt
include/: myheader.h
src/: checkGameCondition.c  drawGame.c  generateNewTile.c  initializeGame.c  main.c  menu.c  moveTiles.c  uninstall.c
